--- a/boldgrid-theme-framework/assets/scss/boldgrid/_woocommerce.scss
+++ b/boldgrid-theme-framework/assets/scss/boldgrid/_woocommerce.scss
@@ -45,6 +45,7 @@
 		.input-group-btn {
 			width: auto;
 			& > .btn {
+				border: 1px solid transparent;
 				padding: 11px;
 				font-size: 14px;
 				line-height: 1;
